--- a/rutas_cfg.env
+++ b/rutas_cfg.env
@@ -1,3 +1,3 @@
-RUTA_BASE_MODELOS = ../proyecto_tesis/corridas/mejores
-RUTA_BASE_YOLOS = ../proyecto_tesis
+RUTA_BASE_MODELOS = ../pothole-detector-backend/corridas/mejores
+RUTA_BASE_YOLOS = ../pothole-detector-backend
 RUTA_SALIDAS = ./outputs
